asconfigc: handles additionalOptions and displays stdout/stderr in correct order